[project]
name = "twitter-client"
version = "0.1.0"
description = "Single-worker Twitter client with automatic rate limit handling"
requires-python = ">=3.10"
dependencies = [
    "tweepy>=4.14",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "APScheduler>=3.10.0",
    "requests>=2.32.0",
    "requests-oauthlib>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

